tests/errors/opaque-on-non-enum/main.pa
# `opaque` may only modify a top-level `enum`.
opaque def x = 1
def main = print "x"
